RE #61: Renamed UIToggle to UICollapse to match React Strap. Deleted UIToggle example.  Removed hover option for dropdowns, now only active on click using bootstrap's js. Increased margin-right on switch and btn-radius-ground to .5rem to match other buttons.  Made form-control's border color solid instead of a transparent black so that input-groups don't have shared border issues.  Added some left padding room to Triniti svg logo. Reduced font size of card-header when in sidebar to set a better hierarchy on titles.  Hope to add toggle ability to sidebar card-header as a future feature.

--- a/demo/src/assets/styles/_variables.scss
+++ b/demo/src/assets/styles/_variables.scss
@@ -345,7 +345,7 @@ $btn-transition:                 background-color .15s ease-in-out, border-color
 $input-bg:                       $gray-200;
 
 $input-color:                    $gray-900;
-$input-border-color:             rgba($black,.125);
+$input-border-color:             $gray-700; // rgba($black,.125)
 $input-box-shadow:               none;
 $form-group-margin-bottom:       1.25rem;
 $input-line-height:              1.5;
@@ -400,7 +400,7 @@ $nav-tabs-link-active-border-color:           $gray-600; // todo check if multip
 // Navbar Theme Colors
 
 $navbar-theme-light:    $gray-200;
-$navbar-theme-dark:     #232935; // #373e4b #21252b #101d6b #21252b #272a31 //  darken(theme-color("dark"), 10%)
+$navbar-theme-dark:     #232935; // #272727 #232935 #373e4b #21252b #101d6b #21252b #272a31 //  darken(theme-color("dark"), 10%)
 
 $navbar-theme-dark-dropdown:   lighten($navbar-theme-dark, 4%);
 $navbar-theme-light-dropdown:  lighten($navbar-theme-light, 4%);
