--- a/src/components/button/_btn-hover.scss
+++ b/src/components/button/_btn-hover.scss
@@ -9,7 +9,7 @@
 .btn-hover,
 .btn-outline-hover {
   opacity: .6;
-  border-color: transparent;
+  border-color: transparent !important;
   background-color: transparent;
 }
 
@@ -18,6 +18,6 @@
 .btn-outline-hover:hover,
 .btn-outline-hover.active {
   opacity: 1;
-  border-color: transparent;
+  border-color: transparent !important;
   background-color: transparent;
 }
