--- a/src/components/button/_btn-toggler.scss
+++ b/src/components/button/_btn-toggler.scss
@@ -17,19 +17,21 @@
 
 .btn-toggler::before {
   position: absolute;
-  top: 15%;
+  top: 50%;
   left: 0;
   display: block;
+  margin-top: -.75rem;
   width: 1.5rem;
   height: 1.5rem;
   content: '';
   transition: transform $transition;
   opacity: .5;
   background: transparent url('./angle-right.svg?fill=%23#{$icon-theme-light}') center center / auto 14px no-repeat;
+  transform: rotate(90deg);
 }
 
 .btn-toggler.active::before {
-  transform: rotate(90deg);
+  transform: rotate(-90deg);
 }
 
 .btn-toggler:hover::after,
