--- a/src/components/card/styles.scss
+++ b/src/components/card/styles.scss
@@ -158,8 +158,10 @@ h4.card-title {
   min-height: $header-height + 2;
 
   .screen-sidebar & {
-    font-weight: 400;
+    font-weight: 500;
     background-color: theme-color("light");
+    font-size: .875rem;
+    min-height: 44px;
   }
 
   .screen-sidebar-body > .card:not(:first-child) & {
