--- a/src/components/switch/styles.scss
+++ b/src/components/switch/styles.scss
@@ -200,5 +200,5 @@ input.switch-input.form-control-sm + label {
 
 .form-group .switch-input-label,
 .form-check .switch-input-label {
-  margin-right: .4rem;
+  margin-right: .5rem;
 }
